# VoiceBridge

./: .gitignore  .gitmodules  BETA_TESTER_FEEDBACK.md  CHECK_BEFORE_RELEASE.md  CONTRIBUTING.md  COPYRIGHT_HEADER.java  COPYRIGHT_PROTECTION.md  DEPLOYMENT_CHECKLIST.md  FIX_GRADLE_ISSUES.md  GITHUB_RELEASE_TEMPLATE.md  IMPLEMENTATION.md  LEGAL_PROTECTION_SUMMARY.md  LICENSE  LICENSE_OPTIONS.md  MONETIZATION_ROADMAP.md  PROGRESS_SESSION_SUMMARY.md  README.md  REVENUE_PROJECTIONS.md  add_copyright_headers.bat  build.gradle  commit_and_push.bat  fix_all_compose_errors.bat  gradlew  gradlew.bat  quick_build_test.md  quick_test_distribution.md  settings.gradle
.github/workflows/: ci.yml  deploy-docs.yml  performance.yml  security.yml
android/: build-fix.gradle  build.gradle  build_for_testing.bat  build_from_windows.bat  build_signed_bundle.bat  gradle.properties  java_wrapper.sh  prepare_for_stores.bat  settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/androidTest/java/com/voicebridge/: AccessibilityServiceTest.kt  JNIBridgeTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/skills/: employment_form_skill.yaml  government_form_skill.yaml  medical_form_skill.yaml
android/app/src/main/assets/skills/forms/: florida_snap_renewal.yaml
android/app/src/main/cpp/: CMakeLists.txt  audio_processor.cpp  text_processor.cpp  voicebridge.cpp
android/app/src/main/java/com/voicebridge/: Application.kt  MainActivity.kt  RealMainActivity.kt  SimpleMainActivity.kt  VoiceBridgeNative.kt
android/app/src/main/java/com/voicebridge/accessibility/: AccessibilitySettingsActivity.kt  VoiceBridgeAccessibilityService.kt
android/app/src/main/java/com/voicebridge/api/: ClaudeAPI.kt  GoogleVisionAPI.kt  WhisperAPI.kt
android/app/src/main/java/com/voicebridge/audio/: AudioRecorder.kt
android/app/src/main/java/com/voicebridge/camera/: CameraProcessor.kt  SimpleCameraProcessor.kt
android/app/src/main/java/com/voicebridge/config/: APIConfig.kt
android/app/src/main/java/com/voicebridge/crash/: CrashReportActivity.kt  CrashReportAdapter.kt  CrashReporter.kt
android/app/src/main/java/com/voicebridge/language/: LanguageManager.kt  LanguageSettingsActivity.kt
android/app/src/main/java/com/voicebridge/ocr/: OCRProcessor.kt  SimpleOCRProcessor.kt
android/app/src/main/java/com/voicebridge/onboarding/: OnboardingActivity.kt
android/app/src/main/java/com/voicebridge/skills/: SkillEngine.kt  SkillTemplateManager.kt
android/app/src/main/java/com/voicebridge/telemetry/: OfflineCrashReporter.kt  PrivacyAnalytics.kt
android/app/src/main/java/com/voicebridge/ui/theme/: Color.kt  Theme.kt  Type.kt
android/app/src/main/java/com/voicebridge/vision/: VisionLLMService.kt
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: accessibility.xml  colors.xml  ic_launcher_background.xml  strings.xml  themes.xml
android/app/src/main/res/values-de/: strings.xml
android/app/src/main/res/values-es/: strings.xml
android/app/src/main/res/values-fr/: strings.xml
android/app/src/main/res/values-it/: strings.xml
android/app/src/main/res/values-night/: colors.xml  themes.xml
android/app/src/main/res/values-pt/: strings.xml
android/app/src/main/res/xml/: accessibility_service_config.xml
android/app/src/test/java/com/voicebridge/: AudioRecorderTest.kt  OCRProcessorTest.kt  SkillEngineTest.kt
android/releases/: README.md
android/testing_distribution/: README.md
docs/: app-signing-guide.md  deploy.sh  eula.html  getting-started.html  index.html  permissions-and-privacy.html  play-store-deployment.md  privacy-policy.html
scripts/: benchmark.sh  build-release.sh  build.sh  build_models.sh  deploy.sh  download_tessdata.sh  model_cache.sh  release.sh  setup_submodules.sh
skills/forms/: florida_snap_renovation_es.yaml  job_application.yaml  medical_intake.yaml  tax_preparation.yaml
store/: PLAY_STORE_CHECKLIST.md  PRIVACY_POLICY.md  README.md
store/data-safety/: data_safety_form.md
store/graphics/: generate-assets.sh
store/listings/en-US/: changelog.txt  full-description.txt  short-description.txt  title.txt
store/metadata/: category.txt  contact-details.txt  privacy-policy-url.txt  tags.txt
store/release/: app-signing.md  release-notes.txt
store_assets/: app_description.md  create_store_assets.md  store_upload_checklist.md
tools/: skill-lint.py  validate-skills.sh
tools/graphics-generator/: generate_store_graphics.py
tools/icon-generator/: generate_icons.py  generate_icons.sh
tools/screenshot-generator/: ScreenshotGenerator.kt  generate_screenshots.sh
